--- a/src/main/resources/db/changelog/21.02.2025/01_create_user_table.yaml
+++ b/src/main/resources/db/changelog/21.02.2025/01_create_user_table.yaml
@@ -19,6 +19,7 @@ databaseChangeLog:
                   type: VARCHAR(50)
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: description
                   type: TEXT
