--- a/src/main/resources/db/changelog/21.02.2025/01_create_user_table.yaml
+++ b/src/main/resources/db/changelog/21.02.2025/01_create_user_table.yaml
@@ -23,9 +23,15 @@ databaseChangeLog:
               - column:
                   name: description
                   type: TEXT
+                  constraints:
+                    nullable: false
               - column:
                   name: date_of_birth
                   type: DATE
+                  constraints:
+                    nullable: false
               - column:
                   name: created_at
                   type: TIMESTAMP WITH TIME ZONE
+                  constraints:
+                    nullable: false
