--- a/src/main/resources/db/changelog/03.03.2025/db.changelog-release.yaml
+++ b/src/main/resources/db/changelog/03.03.2025/db.changelog-release.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - include:
-      file: "21.02.2025/db.changelog-release.yaml"
+      file: 01_update_user_table.yaml
       relativeToChangelogFile: true
   - include:
-      file: "03.03.2025/db.changelog-release.yaml"
+      file: 02_update_contact_table.yaml
       relativeToChangelogFile: true
