fixed id in ContactController, removed userId filter

--- a/src/main/resources/db/changelog/03.03.2025/01_update_user_table.yaml
+++ b/src/main/resources/db/changelog/03.03.2025/01_update_user_table.yaml
@@ -13,4 +13,4 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     unique: true
-                  defaultValue: uuid_generate_v4()
+                  defaultValue: gen_random_uuid()
