--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -77,6 +77,11 @@
             <artifactId>org.jacoco.agent</artifactId>
             <version>0.8.12</version>
         </dependency>
+        <dependency>
+            <groupId>asset.spy</groupId>
+            <artifactId>auth-lib</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -127,5 +132,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
