feat(STOCK-84) fixed build.yml

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
     <repositories>
         <repository>
-            <id>github</id>
-            <url>https://maven.pkg.github.com/Nastss6tx5/asset-spy-auth-lib</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
