--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
             <version>0.8.12</version>
         </dependency>
         <dependency>
-            <groupId>org.github.Nastss6tx5</groupId>
+            <groupId>com.github.Nastss6tx5</groupId>
             <artifactId>asset-spy-auth-lib</artifactId>
             <version>v1.0.0</version>
         </dependency>
