--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,16 +20,18 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     default-schema: asset_spy_user_service_db
 
-  data:
-    redis:
-      host: localhost
-      port: 6379
   cache:
     type: redis
     redis:
-      time-to-live: 600000
+      time-to-live: 3600000
       key-prefix: "cache:"
       use-key-prefix: true
+
+cache:
+  user:
+    ttl: 7200000
+  contact:
+    ttl: 3600000
 
 security:
   jwt:
