--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,8 @@
 databaseChangeLog:
   - include:
+        file: "00.00.2025/db.changelog-release.yaml"
+        relativeToChangelogFile: true
+  - include:
       file: "21.02.2025/db.changelog-release.yaml"
       relativeToChangelogFile: true
   - include:
