--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,15 @@ services:
     ports:
       - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/asset_spy_user_service_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/asset_spy_user_service_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 123
-      REDIS_HOST: localhost
+      REDIS_HOST: redis
       REDIS_PORT: 6379
       SPRING_PROFILES_ACTIVE: local
     networks:
-      - user-network
+      - asset-spy-network
 
 networks:
-  user-network:
-    driver: bridge
+  asset-spy-network:
+    external: true
