--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,14 @@ services:
     ports:
       - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/asset_spy_user_service_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/asset_spy_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 123
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      SPRING_PROFILES_ACTIVE: local
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
     networks:
       - asset-spy-network
 
 networks:
   asset-spy-network:
-    external: true
+    name: asset-spy-network
